# WeatherDashboardApp

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
docs/: ComponentResponsibilities.md
docs/design/: eventDiagram.wsd
docs/diagrams/: eventDiagram.wsd
include/: mock.h  version.h.in
src/: main.cpp
tests/: CMakeLists.txt
tests/Mocks/: mock_test.cpp
